--- a/src/app/components/list-clients/list-clients.component.html
+++ b/src/app/components/list-clients/list-clients.component.html
@@ -1,1 +1,32 @@
-<p>list-clients works!</p>
+<div class="list__client">
+  <table class="table">
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col">Dni</th>
+        <th scope="col">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-up-fill"
+            viewBox="0 0 16 16" (click)="orderDesc()">
+            <path
+              d="m7.247 4.86-4.796 5.481c-.566.647-.106 1.659.753 1.659h9.592a1 1 0 0 0 .753-1.659l-4.796-5.48a1 1 0 0 0-1.506 0z" />
+          </svg>Nombre<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+            class="bi bi-caret-down-fill" viewBox="0 0 16 16" (click)="orderAsc()">
+            <path
+              d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
+          </svg>
+        </th>
+        <th scope="col">Email</th>
+        <th scope="col">Fecha Nacimiento</th>
+        <th scope="col">Foto</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let client of clients">
+        <th scope="row" class="align-middle">{{client.dni}}</th>
+        <td class="align-middle">{{client.nombre}}</td>
+        <td class="align-middle">{{client.email}}</td>
+        <td class="align-middle">{{client.fechaNacimiento}}</td>
+        <td><img [src]="client.fotografia" alt="" class="photo"></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
